# rkaiq

./: .gitignore  Cargo.toml  README.md
.cargo/: config-rk3568.toml  config-rk3588.toml
crates/rkaiq/: Cargo.toml
crates/rkaiq-sys/: Cargo.toml  build.rs
crates/rkaiq-sys/src/: lib.rs
crates/rkaiq/examples/: gst-video-preview.rs  minimal.rs
crates/rkaiq/src/: awb.rs  context.rs  defog.rs  gamma.rs  lib.rs  misc.rs  sysctl.rs  types.rs
examples/: gst-video-preview.rs  list-sensors.rs
rkaiq-sys/: Cargo.toml  build.rs
rkaiq-sys/src/: lib.rs
src/: acm.rs  ae.rs  af.rs  asd.rs  awb.rs  context.rs  defog.rs  error.rs  fec.rs  gamma.rs  hdr.rs  ldch.rs  lib.rs  nr.rs  prelude.rs  sharpen.rs  sysctl.rs  types.rs
