[workspace]
members = [
    "crates/rkaiq",
    "crates/rkaiq-sys",
]
resolver = "2"

[workspace.package]
version = "5.0.6"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/varphone/rkaiq.git"
authors = [ "Varphone Wong <varphone@qq.com>"]

[workspace.dependencies]
regex = "1"
rkaiq = { version = "5.0", path = "crates/rkaiq", default-features = false }
rkaiq-sys = { version = "5.0", path = "crates/rkaiq-sys", default-features = false }
