[package]
name = "rkaiq-sys"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["embedded", "external-ffi-bindings", "graphics"]
description = "Rockchip RKAIQ FFI bindings for Rust"
documentation = "https://docs.rs/rkaiq-sys"
repository = "https://github.com/varphone/rkraiq.git"
authors = [ "Varphone Wong <varphone@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.59.2"
