[package]
name = "rkaiq-sys"
version = "5.0.5"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["embedded", "external-ffi-bindings", "graphics"]
description = "Rockchip RKAIQ FFI bindings for Rust"
documentation = "https://docs.rs/rkaiq-sys"
repository = "https://github.com/varphone/rkraiq.git"
authors = [ "Varphone Wong <varphone@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.65"

[features]
default = ["v5_0", "isp_hw_v30"]
fullv = []
isp_hw_v20 = []
isp_hw_v21 = []
isp_hw_v30 = []
isp_hw_v31 = []
isp_hw_v32 = []
v1_0 = []
v2_0 = []
v3_0 = []
v4_0 = []
v5_0 = []
