[package]
name = "rkaiq-sys"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
categories = ["embedded", "external-ffi-bindings", "graphics"]
description = "Rockchip RKAIQ FFI bindings for Rust"
documentation = "https://docs.rs/rkaiq-sys"
repository = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69"

[features]
default = ["v5_0", "isp_hw_v30"]
fullv = []
isp_hw_v20 = []
isp_hw_v21 = []
isp_hw_v30 = []
isp_hw_v31 = []
isp_hw_v32 = []
v1_0 = []
v2_0 = []
v3_0 = []
v4_0 = []
v5_0 = []
